[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/level/level.gd" type="Script" id=1]
[ext_resource path="res://objects/power_ups/ultimate_charge.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/level/soil_block/soil_block.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/level/rock_block/rock_block.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/level/gold_block/gold_block.tscn" type="PackedScene" id=5]
[ext_resource path="res://objects/level/fire_pit/fire_pit.tscn" type="PackedScene" id=6]
[ext_resource path="res://fx/spawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/power_ups/speed_boost.tscn" type="PackedScene" id=8]
[ext_resource path="res://maps/test_map.png" type="Resource" id=9]

[node name="Level" type="Spatial"]
script = ExtResource( 1 )
map = ExtResource( 9 )
soil_blocks = [ ExtResource( 3 ) ]
rock_blocks = [ ExtResource( 4 ) ]
gold_block = ExtResource( 5 )
poi_block = ExtResource( 6 )
p1_base_coord = Vector2( 1, 11 )
p2_base_coord = Vector2( 21, 11 )
poi_coord = Vector2( 11, 11 )
power_ups = [ ExtResource( 8 ) ]
poi_power_up = ExtResource( 2 )
gold_spawn_zones = [ Rect2( 8, 0, 7, 7 ), Rect2( 8, 16, 7, 7 ) ]

[node name="Spawner" parent="." instance=ExtResource( 7 )]
visible = false

[node name="SoilSpawnTimer" type="Timer" parent="."]

[node name="POISpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SoilSpawnTimer" to="." method="__spawn_random_soil"]
[connection signal="timeout" from="POISpawnTimer" to="." method="__spawn_poi_powerup"]
